# wtun

./: .gitignore  Cargo.toml  build.rs
extract-resources/: Cargo.toml
extract-resources/output/amd64/: wintun-arm64.inf
extract-resources/output/x86/: wintun-arm64.cat  wintun-arm64.sys
extract-resources/src/: main.rs  main1.rs
setupapihost/: Cargo.toml  build.rs
setupapihost/src/: lib.rs
src/: adapter.rs  adapter_win7.rs  driver.rs  lib.rs  logger.rs  namespace.rs  nci.rs  ntdll.rs  registry.rs  resource.rs  rundll32.rs  session.rs  wintun_inf.rs  wmain.rs
src/driver-files/: extract-driverver.js  wintun-x86.cat  wintun-x86.inf  wintun-x86.sys
src/winapi_ext/: devquery.rs  mod.rs  shlwapi.rs  swdevice.rs  swdevicedef.rs  verrsrc.rs  winternl.rs
tests/: test.rs  test_adapter.rs  test_delete_driver.rs  test_session.rs
winapi-bindgen/: Cargo.toml  swdevicedef.rs
winapi-bindgen/src/: main.rs
