[package]
name = "wtun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
get-last-error = "0.1.1"
lazy_static = "1.4.0"
rand = "0.8.5"
winapi = { version = "0.3.9", features = [
  "netioapi",
  "minwindef",
  "devpropdef",
  "setupapi",
  "cfgmgr32",
  "winerror",
  "processenv",
  "heapapi",
  "winnt",
  "handleapi",
  "combaseapi",
  "threadpoollegacyapiset",
  "synchapi",
  "winefs",
  "securitybaseapi",
  "namespaceapi",
  "devguid",
  "ipexport",
  "impl-debug",
  "devpkey",
  "corecrt",
  "winver",
  "sysinfoapi",
  "sddl",
  "wow64apiset",
] }
cutils = { git = "https://github.com/asakhar/cutils.git" }

[features]
default = ["windows_10", "wow64_support"]
wow64_support = []
windows_7 = []
windows_10 = []
