[package]
name = "wtun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
get-last-error = "0.1.1"
lazy_static = "1.4.0"
rand = "0.8.5"
winapi = { version = "0.3.9", features = [
  "wininet",
  "iphlpapi",
  "ipexport",
  "netioapi",
  "minwindef",
  "devpropdef",
  "setupapi",
  "cfgmgr32",
  "winerror",
  "processenv",
  "heapapi",
  "winnt",
  "handleapi",
  "combaseapi",
  "threadpoollegacyapiset",
  "synchapi",
  "winefs",
  "securitybaseapi",
  "namespaceapi",
  "devguid",
  "ipexport",
  "impl-debug",
  "impl-default",
  "devpkey",
  "corecrt",
  "winver",
  "sysinfoapi",
  "sddl",
  "wow64apiset",
  "memoryapi",
  "ioapiset",
] }
cutils = { git = "https://github.com/asakhar/cutils.git" }
log = "0.4.19"

[dev-dependencies]
chrono = "*"
simple_logger = "*"

[build-dependencies]
winres = { version = "*", optional = true }

[features]
default = ["windows10", "request_elevation"]
windows7 = []
windows10 = []
request_elevation = ["dep:winres"]