[package]
name = "extract-resources"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "main"

[[bin]]
path = "src/main1.rs"
name = "main1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.0"
widestring = "1.0.2"
winapi = { version = "0.3.9", features = ["minwindef"] }
